Fix description spacing

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -233,7 +233,7 @@ table {
 }
 
 .description {
-    padding: 0px 100px;
+    padding: 0px 65px;
     text-align: justify;
 }
 
